--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -15,8 +15,9 @@
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .panel {
+        display: block;
         padding: 5px;
-        margin: 5px auto;
+        margin: 1em auto;
         border: dashed black;
       }
     </style>
@@ -28,7 +29,10 @@
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create({navigation: {scroll: false,}});
+      var slideshow = remark.create({
+        navigation: {scroll: false,},
+        highlightLines: true
+      });
     </script>
   </body>
 </html>
